--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,57 @@
 plugins {
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.61'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.61'
 }
 
 repositories {
     mavenCentral()
+    jcenter()
+    maven {
+        url 'https://dl.bintray.com/kotlin/kotlinx/'
+    }
 }
-
 kotlin {
-    androidNativeArm32("bridge") {
-        compilations.main.cinterops {
-            ubus
-        }
-
-        binaries {
-            sharedLib {
-                baseName="ubusbridge"
+//     androidNativeArm32("bridge") {
+//         compilations.main {
+//             cinterops {
+//                 ubus
+//             }
+//             dependencies {
+//                 implementation files('/Users/mobing/Work/hzgj/ubus-bridge/libs/androidArm32/kotlinx-serialization-runtime.klib')
+//             }
+//         }
+//         binaries {
+//             sharedLib {
+//                 baseName="ubusbridge"
+//             }
+//         }
+//     }
+    macosX64("bridge"){
+        compilations.main {
+            cinterops {
+                ubus
+            }
+            dependencies {
+                implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:0.14.0"
             }
         }
+        binaries {
+            executable{}
+        }
     }
+//     sourceSets{
+//        bridgeosxMain{
+//             dependencies {
+//                 implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:0.14.0"
+//             }
+//         }
+//         macosX64.dependsOn(bridgeosxMain)
+//         bridgeMain{
+//             dependencies {
+//                 files '/Users/mobing/Work/hzgj/ubus-bridge/libs/androidArm32/kotlinx-serialization-runtime.klib'
+//             }
+//         }
+//     }
 }
 
 task install(type:Copy) {
@@ -25,10 +59,7 @@ task install(type:Copy) {
     into "/Users/mobing/Work/hzgj/hzgj-app/app/libs/armeabi-v7a"
 }
 
-install.dependsOn build
-
 wrapper {
     gradleVersion = "5.6.2"
     distributionType = "ALL"
 }
-
